added country/capital multi search project files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 			<p><a href="./projects/react-1/index.html"><span class="title">React 1</span> — Simple real-time search</a></p>
 			<p><a href="./projects/react-2/index.html"><span class="title">React 2</span> — Dynamic div generation</a></p>
-			<p><a href="./projects/react-3/index.html"> <span class="title">React 3</span> — </a></p>
+			<p><a href="./projects/react-3/index.html"> <span class="title">React 3</span> — Table Multi-Seach Tool</a></p>
 			<p><a href="./projects/react-4/index.html"> <span class="title">React 4</span> — </a></p>
 			<p><a href="./projects/react-5/index.html"> <span class="title">React 5</span> — </a></p>
 			<p><a href="./projects/react-6/index.html"> <span class="title">React 6</span> — </a></p>
