added react bar chart project

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<p><a target="_blank" href="./projects/react-2/index.html"><span class="title">React 2</span> — Dynamic div generation</a></p>
 			<p><a target="_blank" href="./projects/react-3/index.html"> <span class="title">React 3</span> — Table Multi-Seach Tool</a></p>
 			<p><a target="_blank" href="./projects/react-4/index.html"> <span class="title">React 4</span> — Basic To-Do List App</a></p>
-			<p><a target="_blank" href="./projects/react-5/index.html"> <span class="title">React 5</span> — </a></p>
+			<p><a target="_blank" href="./projects/react-5/index.html"> <span class="title">React 5</span> — A React Bar Chart</a></p>
 			<p><a target="_blank" href="./projects/react-6/index.html"> <span class="title">React 6</span> — </a></p>
 			<p><a target="_blank" href="./projects/react-7/index.html"> <span class="title">React 7</span> — </a></p>
 			<p><a target="_blank" href="./projects/react-8/index.html"> <span class="title">React 8</span> — </a></p>
