--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
 
 		<div class="projectList">
 
+			<div class="innerWrapper">
+
 			<p><a target="_blank" href="./projects/react-1/index.html"><span class="title">React 1</span> — Simple real-time search</a></p>
 			<p><a target="_blank" href="./projects/react-2/index.html"><span class="title">React 2</span> — Dynamic div generation</a></p>
 			<p><a target="_blank" href="./projects/react-3/index.html"> <span class="title">React 3</span> — Table Multi-Seach Tool</a></p>
 			<p><a target="_blank" href="./projects/react-4/index.html"> <span class="title">React 4</span> — Basic To-Do List App</a></p>
 			<p><a target="_blank" href="./projects/react-5/index.html"> <span class="title">React 5</span> — A React Bar Chart</a></p>
 			<p><a target="_blank" href="./projects/react-6/index.html"> <span class="title">React 6</span> — Trending GIFs from Giphy</a></p>
-			<p><a target="_blank" href="./projects/react-7/index.html"> <span class="title">React 7</span> — </a></p>
+			<p><a target="_blank" href="./projects/react-7/index.html"> <span class="title">React 7</span> — Rendering HighCharts within React</a></p>
 			<p><a target="_blank" href="./projects/react-8/index.html"> <span class="title">React 8</span> — </a></p>
 			<p><a target="_blank" href="./projects/react-9/index.html"> <span class="title">React 9</span> — </a></p>
 			<p><a target="_blank" href="./projects/react-10/index.html"><span class="title">React 10</span> — </a></p>
@@ -45,6 +47,8 @@
 			<p><a target="_blank" href="./projects/react-25/index.html"><span class="title">React 25</span> — </a></p>
 
 			<p>About - Github</p>
+
+			</div>
 
 		</div>
 
