--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<p><a target="_blank" href="./projects/react-5/index.html"> <span class="title">React 5</span> — A React Bar Chart</a></p>
 			<p><a target="_blank" href="./projects/react-6/index.html"> <span class="title">React 6</span> — Trending GIFs from Giphy</a></p>
 			<p><a target="_blank" href="./projects/react-7/index.html"> <span class="title">React 7</span> — Rendering HighCharts within React</a></p>
-			<p><a target="_blank" href="./projects/react-8/index.html"> <span class="title">React 8</span> — </a></p>
+			<p><a target="_blank" href="./projects/react-8/index.html"> <span class="title">React 8</span> — An Interactive Movement Interface</a></p>
 			<p><a target="_blank" href="./projects/react-9/index.html"> <span class="title">React 9</span> — </a></p>
 			<p><a target="_blank" href="./projects/react-10/index.html"><span class="title">React 10</span> — </a></p>
 			<p><a target="_blank" href="./projects/react-11/index.html"><span class="title">React 11</span> — </a></p>
