--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
 			<div class="innerWrapper">
 
-			<p><a target="_blank" href="./projects/react-1/index.html"><span class="title">React 1</span> — Simple real-time search</a></p>
-			<p><a target="_blank" href="./projects/react-2/index.html"><span class="title">React 2</span> — Dynamic div generation</a></p>
-			<p><a target="_blank" href="./projects/react-3/index.html"> <span class="title">React 3</span> — Table Multi-Seach Tool</a></p>
-			<p><a target="_blank" href="./projects/react-4/index.html"> <span class="title">React 4</span> — Basic To-Do List App</a></p>
-			<p><a target="_blank" href="./projects/react-5/index.html"> <span class="title">React 5</span> — A React Bar Chart</a></p>
-			<p><a target="_blank" href="./projects/react-6/index.html"> <span class="title">React 6</span> — Trending GIFs from Giphy</a></p>
-			<p><a target="_blank" href="./projects/react-7/index.html"> <span class="title">React 7</span> — Rendering HighCharts within React</a></p>
-			<p><a target="_blank" href="./projects/react-8/index.html"> <span class="title">React 8</span> — An Interactive Movement Interface</a></p>
-			<p><a target="_blank" href="./projects/react-9/index.html"> <span class="title">React 9</span> — A Basic Form Service</a></p>
-			<p><a target="_blank" href="./projects/react-10/index.html"><span class="title">React 10</span> — </a></p>
+			<p><a target="_blank" href="./projects/react-1/index.html"><span class="title">React 1</span>  &nbsp; — Simple real-time search</a></p>
+			<p><a target="_blank" href="./projects/react-2/index.html"><span class="title">React 2</span>  &nbsp; — Dynamic div generation</a></p>
+			<p><a target="_blank" href="./projects/react-3/index.html"> <span class="title">React 3</span> &nbsp; — Table Multi-Seach Tool</a></p>
+			<p><a target="_blank" href="./projects/react-4/index.html"> <span class="title">React 4</span> &nbsp; — Basic To-Do List App</a></p>
+			<p><a target="_blank" href="./projects/react-5/index.html"> <span class="title">React 5</span> &nbsp; — A React Bar Chart</a></p>
+			<p><a target="_blank" href="./projects/react-6/index.html"> <span class="title">React 6</span> &nbsp; — Trending GIFs from Giphy</a></p>
+			<p><a target="_blank" href="./projects/react-7/index.html"> <span class="title">React 7</span> &nbsp; — Rendering HighCharts within React</a></p>
+			<p><a target="_blank" href="./projects/react-8/index.html"> <span class="title">React 8</span> &nbsp; — An Interactive Movement Interface</a></p>
+			<p><a target="_blank" href="./projects/react-9/index.html"> <span class="title">React 9</span> &nbsp; — A Basic Form Service</a></p>
+			<p><a target="_blank" href="./projects/react-10/index.html"><span class="title">React 10</span> — International Space Station Data</a></p>
 			<p><a target="_blank" href="./projects/react-11/index.html"><span class="title">React 11</span> — </a></p>
 			<p><a target="_blank" href="./projects/react-12/index.html"><span class="title">React 12</span> — </a></p>
 			<p><a target="_blank" href="./projects/react-13/index.html"><span class="title">React 13</span> — </a></p>
