--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
 
 			<div class="innerWrapper">
 
-			<p><a target="_blank" href="./projects/1-react/index.html"><span class="title">React 1</span>  &nbsp; — Simple real-time search</a></p>
-			<p><a target="_blank" href="./projects/2-react/index.html"><span class="title">React 2</span>  &nbsp; — Dynamic div generation</a></p>
-			<p><a target="_blank" href="./projects/3-react/index.html"> <span class="title">React 3</span> &nbsp; — Table Multi-Seach Tool</a></p>
-			<p><a target="_blank" href="./projects/4-react/index.html"> <span class="title">React 4</span> &nbsp; — Basic To-Do List App</a></p>
-			<p><a target="_blank" href="./projects/5-react/index.html"> <span class="title">React 5</span> &nbsp; — A React Bar Chart</a></p>
-			<p><a target="_blank" href="./projects/6-react/index.html"> <span class="title">React 6</span> &nbsp; — Trending GIFs from Giphy</a></p>
-			<p><a target="_blank" href="./projects/7-react/index.html"> <span class="title">React 7</span> &nbsp; — Rendering HighCharts within React</a></p>
-			<p><a target="_blank" href="./projects/8-react/index.html"> <span class="title">React 8</span> &nbsp; — An Interactive Movement Interface</a></p>
-			<p><a target="_blank" href="./projects/9-react/index.html"> <span class="title">React 9</span> &nbsp; — A Basic Form Service</a></p>
-			<p><a target="_blank" href="./projects/10-react/index.html"><span class="title">React 10</span> — International Space Station Data</a></p>
-			<p><a target="_blank" href="./projects/11-react/index.html"><span class="title">React 11</span> — </a></p>
-			<p><a target="_blank" href="./projects/12-react/index.html"><span class="title">React 12</span> — </a></p>
-			<p><a target="_blank" href="./projects/13-react/index.html"><span class="title">React 13</span> — </a></p>
-			<p><a target="_blank" href="./projects/14-react/index.html"><span class="title">React 14</span> — </a></p>
-			<p><a target="_blank" href="./projects/15-react/index.html"><span class="title">React 15</span> — </a></p>
-			<p><a target="_blank" href="./projects/16-react/index.html"><span class="title">React 16</span> — </a></p>
-			<p><a target="_blank" href="./projects/17-react/index.html"><span class="title">React 17</span> — </a></p>
-			<p><a target="_blank" href="./projects/18-react/index.html"><span class="title">React 18</span> — </a></p>
-			<p><a target="_blank" href="./projects/19-react/index.html"><span class="title">React 19</span> — </a></p>
-			<p><a target="_blank" href="./projects/20-react/index.html"><span class="title">React 20</span> — </a></p>
-			<p><a target="_blank" href="./projects/21-react/index.html"><span class="title">React 21</span> — </a></p>
-			<p><a target="_blank" href="./projects/22-react/index.html"><span class="title">React 22</span> — </a></p>
-			<p><a target="_blank" href="./projects/23-react/index.html"><span class="title">React 23</span> — </a></p>
-			<p><a target="_blank" href="./projects/24-react/index.html"><span class="title">React 24</span> — </a></p>
-			<p><a target="_blank" href="./projects/25-react/index.html"><span class="title">React 25</span> — </a></p>
+			<p><a target="_blank" href="./projects/1_Project/index.html"><span class="title">React 1</span>  &nbsp; — Simple real-time search</a></p>
+			<p><a target="_blank" href="./projects/2_Project/index.html"><span class="title">React 2</span>  &nbsp; — Dynamic div generation</a></p>
+			<p><a target="_blank" href="./projects/3_Project/index.html"> <span class="title">React 3</span> &nbsp; — Table Multi-Seach Tool</a></p>
+			<p><a target="_blank" href="./projects/4_Project/index.html"> <span class="title">React 4</span> &nbsp; — Basic To-Do List App</a></p>
+			<p><a target="_blank" href="./projects/5_Project/index.html"> <span class="title">React 5</span> &nbsp; — A React Bar Chart</a></p>
+			<p><a target="_blank" href="./projects/6_Project/index.html"> <span class="title">React 6</span> &nbsp; — Trending GIFs from Giphy</a></p>
+			<p><a target="_blank" href="./projects/7_Project/index.html"> <span class="title">React 7</span> &nbsp; — Rendering HighCharts within React</a></p>
+			<p><a target="_blank" href="./projects/8_Project/index.html"> <span class="title">React 8</span> &nbsp; — An Interactive Movement Interface</a></p>
+			<p><a target="_blank" href="./projects/9_Project/index.html"> <span class="title">React 9</span> &nbsp; — A Basic Form Service</a></p>
+			<p><a target="_blank" href="./projects/10_Project/index.html"><span class="title">React 10</span> — International Space Station Data</a></p>
+			<p><a target="_blank" href="./projects/11_Project/index.html"><span class="title">React 11</span> — </a></p>
+			<p><a target="_blank" href="./projects/12_Project/index.html"><span class="title">React 12</span> — </a></p>
+			<p><a target="_blank" href="./projects/13_Project/index.html"><span class="title">React 13</span> — </a></p>
+			<p><a target="_blank" href="./projects/14_Project/index.html"><span class="title">React 14</span> — </a></p>
+			<p><a target="_blank" href="./projects/15_Project/index.html"><span class="title">React 15</span> — </a></p>
+			<p><a target="_blank" href="./projects/16_Project/index.html"><span class="title">React 16</span> — </a></p>
+			<p><a target="_blank" href="./projects/17_Project/index.html"><span class="title">React 17</span> — </a></p>
+			<p><a target="_blank" href="./projects/18_Project/index.html"><span class="title">React 18</span> — </a></p>
+			<p><a target="_blank" href="./projects/19_Project/index.html"><span class="title">React 19</span> — </a></p>
+			<p><a target="_blank" href="./projects/20_Project/index.html"><span class="title">React 20</span> — </a></p>
+			<p><a target="_blank" href="./projects/21_Project/index.html"><span class="title">React 21</span> — </a></p>
+			<p><a target="_blank" href="./projects/22_Project/index.html"><span class="title">React 22</span> — </a></p>
+			<p><a target="_blank" href="./projects/23_Project/index.html"><span class="title">React 23</span> — </a></p>
+			<p><a target="_blank" href="./projects/24_Project/index.html"><span class="title">React 24</span> — </a></p>
+			<p><a target="_blank" href="./projects/25_Project/index.html"><span class="title">React 25</span> — </a></p>
 
 			<p>About - Github</p>
 
