updated with new projects

--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
 
 			<div class="innerWrapper">
 
-			<p><a target="_blank" href="./projects/1_Project/index.html"><span class="title">React 1</span>  &nbsp; — Simple real-time search</a></p>
-			<p><a target="_blank" href="./projects/2_Project/index.html"><span class="title">React 2</span>  &nbsp; — Dynamic div generation</a></p>
-			<p><a target="_blank" href="./projects/3_Project/index.html"> <span class="title">React 3</span> &nbsp; — Table Multi-Seach Tool</a></p>
-			<p><a target="_blank" href="./projects/4_Project/index.html"> <span class="title">React 4</span> &nbsp; — Basic To-Do List App</a></p>
-			<p><a target="_blank" href="./projects/5_Project/index.html"> <span class="title">React 5</span> &nbsp; — A React Bar Chart</a></p>
-			<p><a target="_blank" href="./projects/6_Project/index.html"> <span class="title">React 6</span> &nbsp; — Trending GIFs from Giphy</a></p>
-			<p><a target="_blank" href="./projects/7_Project/index.html"> <span class="title">React 7</span> &nbsp; — Rendering HighCharts within React</a></p>
-			<p><a target="_blank" href="./projects/8_Project/index.html"> <span class="title">React 8</span> &nbsp; — An Interactive Movement Interface</a></p>
-			<p><a target="_blank" href="./projects/9_Project/index.html"> <span class="title">React 9</span> &nbsp; — A Basic Form Service</a></p>
-			<p><a target="_blank" href="./projects/10_Project/index.html"><span class="title">React 10</span> — International Space Station Data</a></p>
-			<p><a target="_blank" href="./projects/11_Project/index.html"><span class="title">React 11</span> — </a></p>
-			<p><a target="_blank" href="./projects/12_Project/index.html"><span class="title">React 12</span> — </a></p>
-			<p><a target="_blank" href="./projects/13_Project/index.html"><span class="title">React 13</span> — </a></p>
-			<p><a target="_blank" href="./projects/14_Project/index.html"><span class="title">React 14</span> — </a></p>
-			<p><a target="_blank" href="./projects/15_Project/index.html"><span class="title">React 15</span> — </a></p>
-			<p><a target="_blank" href="./projects/16_Project/index.html"><span class="title">React 16</span> — </a></p>
-			<p><a target="_blank" href="./projects/17_Project/index.html"><span class="title">React 17</span> — </a></p>
-			<p><a target="_blank" href="./projects/18_Project/index.html"><span class="title">React 18</span> — </a></p>
-			<p><a target="_blank" href="./projects/19_Project/index.html"><span class="title">React 19</span> — </a></p>
-			<p><a target="_blank" href="./projects/20_Project/index.html"><span class="title">React 20</span> — </a></p>
-			<p><a target="_blank" href="./projects/21_Project/index.html"><span class="title">React 21</span> — </a></p>
-			<p><a target="_blank" href="./projects/22_Project/index.html"><span class="title">React 22</span> — </a></p>
-			<p><a target="_blank" href="./projects/23_Project/index.html"><span class="title">React 23</span> — </a></p>
-			<p><a target="_blank" href="./projects/24_Project/index.html"><span class="title">React 24</span> — </a></p>
-			<p><a target="_blank" href="./projects/25_Project/index.html"><span class="title">React 25</span> — </a></p>
+			<p><a target="_blank" href="./projects/Project_1/index.html"><span class="title">React 1</span>  &nbsp; — Simple real-time search</a></p>
+			<p><a target="_blank" href="./projects/Project_2/index.html"><span class="title">React 2</span>  &nbsp; — Dynamic div generation</a></p>
+			<p><a target="_blank" href="./projects/Project_3/index.html"> <span class="title">React 3</span> &nbsp; — Table Multi-Seach Tool</a></p>
+			<p><a target="_blank" href="./projects/Project_4/index.html"> <span class="title">React 4</span> &nbsp; — Basic To-Do List App</a></p>
+			<p><a target="_blank" href="./projects/Project_5/index.html"> <span class="title">React 5</span> &nbsp; — A React Bar Chart</a></p>
+			<p><a target="_blank" href="./projects/Project_6/index.html"> <span class="title">React 6</span> &nbsp; — Trending GIFs from Giphy</a></p>
+			<p><a target="_blank" href="./projects/Project_7/index.html"> <span class="title">React 7</span> &nbsp; — Rendering HighCharts within React</a></p>
+			<p><a target="_blank" href="./projects/Project_8/index.html"> <span class="title">React 8</span> &nbsp; — An Interactive Movement Interface</a></p>
+			<p><a target="_blank" href="./projects/Project_9/index.html"> <span class="title">React 9</span> &nbsp; — A Basic Form Service</a></p>
+			<p><a target="_blank" href="./projects/Project_10/index.html"><span class="title">React 10</span> — International Space Station Data</a></p>
+			<p><a target="_blank" href="./projects/Project_11/index.html"><span class="title">React 11</span> — FCC Random Quote Generator</a></p>
+			<p><a target="_blank" href="./projects/Project_12/index.html"><span class="title">React 12</span> — FCC Current Weather</a></p>
+			<p><a target="_blank" href="./projects/Project_13/index.html"><span class="title">React 13</span> — FCC Wikipedia Viewer</a></p>
+			<p><a target="_blank" href="./projects/Project_14/index.html"><span class="title">React 14</span> — FCC Twitch TV API</a></p>
+			<p><a target="_blank" href="./projects/Project_15/index.html"><span class="title">React 15</span> — FCC Javascript Calculator</a></p>
+			<p><a target="_blank" href="./projects/Project_16/index.html"><span class="title">React 16</span> — </a></p>
+			<p><a target="_blank" href="./projects/Project_17/index.html"><span class="title">React 17</span> — </a></p>
+			<p><a target="_blank" href="./projects/Project_18/index.html"><span class="title">React 18</span> — </a></p>
+			<p><a target="_blank" href="./projects/Project_19/index.html"><span class="title">React 19</span> — </a></p>
+			<p><a target="_blank" href="./projects/Project_20/index.html"><span class="title">React 20</span> — </a></p>
+			<p><a target="_blank" href="./projects/Project_21/index.html"><span class="title">React 21</span> — </a></p>
+			<p><a target="_blank" href="./projects/Project_22/index.html"><span class="title">React 22</span> — </a></p>
+			<p><a target="_blank" href="./projects/Project_23/index.html"><span class="title">React 23</span> — </a></p>
+			<p><a target="_blank" href="./projects/Project_24/index.html"><span class="title">React 24</span> — </a></p>
+			<p><a target="_blank" href="./projects/Project_25/index.html"><span class="title">React 25</span> — </a></p>
 
 			<p>About - Github</p>
 
