added pomodoro clock

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<p><a target="_blank" href="./projects/Project_13/index.html"><span class="title">React 13</span> — FCC Wikipedia Viewer</a></p>
 			<p><a target="_blank" href="./projects/Project_14/index.html"><span class="title">React 14</span> — FCC Twitch TV API</a></p>
 			<p><a target="_blank" href="./projects/Project_15/index.html"><span class="title">React 15</span> — FCC Javascript Calculator</a></p>
-			<p><a target="_blank" href="./projects/Project_16/index.html"><span class="title">React 16</span> — </a></p>
+			<p><a target="_blank" href="./projects/Project_16/index.html"><span class="title">React 16</span> — FCC Pomodoro Clock</a></p>
 			<p><a target="_blank" href="./projects/Project_17/index.html"><span class="title">React 17</span> — </a></p>
 			<p><a target="_blank" href="./projects/Project_18/index.html"><span class="title">React 18</span> — </a></p>
 			<p><a target="_blank" href="./projects/Project_19/index.html"><span class="title">React 19</span> — </a></p>
