added timestamped notes app project

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 			<p><a target="_blank" href="./projects/Project_14/index.html"><span class="title">React 14</span> — FCC Twitch TV API</a></p>
 			<p><a target="_blank" href="./projects/Project_15/index.html"><span class="title">React 15</span> — FCC Javascript Calculator</a></p>
 			<p><a target="_blank" href="./projects/Project_16/index.html"><span class="title">React 16</span> — FCC Pomodoro Clock</a></p>
-			<p><a target="_blank" href="./projects/Project_17/index.html"><span class="title">React 17</span> — </a></p>
-			<p><a target="_blank" href="./projects/Project_18/index.html"><span class="title">React 18</span> — </a></p>
-			<p><a target="_blank" href="./projects/Project_19/index.html"><span class="title">React 19</span> — </a></p>
+			<p><a target="_blank" href="./projects/Project_17/index.html"><span class="title">React 17</span> — FCC Tic-Tac-Toe Game</a></p>
+			<p><a target="_blank" href="./projects/Project_18/index.html"><span class="title">React 18</span> — FCC Simon Game</a></p>
+			<p><a target="_blank" href="./projects/Project_19/index.html"><span class="title">React 19</span> — Timestamped Notes App</a></p>
 			<p><a target="_blank" href="./projects/Project_20/index.html"><span class="title">React 20</span> — </a></p>
 			<p><a target="_blank" href="./projects/Project_21/index.html"><span class="title">React 21</span> — </a></p>
 			<p><a target="_blank" href="./projects/Project_22/index.html"><span class="title">React 22</span> — </a></p>
