updated index.html and styles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<img src = "./assets/react.png">
 				<h1>25 React Projects</h1>
 				<div class = "about">
-					<p class = "aboutText">I built these 25 projects to improve my skills with the React JavaScript library as a student at Free Code Camp. This page is about what I learned in the process of teaching myself React.</p>
+					<p class = "aboutText">I built these 25 projects to learn how to use the React Javascript library. This page is about what I learned in the process.</p>
 				</div>
 		</div>
 
@@ -25,6 +25,7 @@
 				</div>
 
 		<div class = "projectList">
+			<h1 class = "contentTitle mainTitle">The Projects</h1>
 			<table>
 				<tr><td class="leftCol">Project 1:</td><td class="rightCol"><a target="_blank" href="./projects/Project_1/index.html">Simple real-time search</a></td></tr>
 				<tr><td class="leftCol">Project 2:</td><td class="rightCol"><a target="_blank" href="./projects/Project_2/index.html">Dynamic div generation</a></td></tr>
@@ -56,14 +57,18 @@
 		<div id = "line"></div>
 
 		<div class = "content">
-		
-			<div class = "contentWrapper">
-				<p class = "contentText">React is a powerful and influential Javascript library. While working through the Free Code Camp Full Stack Javascript curriculum, I decided to build these 25 projects using React. Nearly half are actually projects from the FCC curriculum, in fact I re-built all 8 of the major Front End Projects (see that project's <a href = "https://github.com/bonham000/React-Front-End-Projects">Github here</a> for an interesting comparison of my 1st and 2nd attempts).</p>
 
-				<p class = "contentText">While building these projects, I enountered many resources in the process of learning React and the React ecosystem. Here I've compiled a list of the most useful resources I came across in order to to help anyone else who might be aspiring to learn more about React. There are many excellent resources available online, so I encourage you to find what suits your learning style. However, I can recommend the following (organized roughly in order of beginning to advanced level).</p>
+			<div class = "contentWrapper">
+				<h1 class = "contentTitle">Learning the React Ecosystem</h1>
+				<p class = "contentText">React is a powerful and influential Javascript library. While working through the Free Code Camp Full Stack Javascript curriculum, I decided to build these 25 projects using React. Nearly half are actually projects from the FCC curriculum, in fact I re-built all 8 of the major Front End Projects (see that project's <a href = "https://github.com/bonham000/React-Front-End-Projects">Github here</a> for an interesting comparison of my 1st and 2nd attempts). Projects 20-25 are the FCC React projects.</p>
+
+				<p class = "contentText">To do this I had to learn a new library from scratch along with the many tools and nuances that come with it, and I was interested in trying to make my learning process as efficient as possible. There are many useful educational resources available for free online, but sometimes it can be hard to find the best materails.</p>
+
+				<p class = "contentText">To help any future newcomers to the React world, I've compiled below a list of the best and most useful resources I came across while learning React (as of June 2016!). There are many excellent resources available online and probably many more to come in the future so I encourage you to find what suits your learning style. However, I can strongly recommend the following. These are organized roughly in order of beginning to advanced level material, and illustrate what I think to be a good learning pathway for React JS and everything that comes with it.</p>
 			</div>
 
 			<div class = "resources">
+				<h1 class = "contentTitle lowerTitle">Educational Resources</h1>
 				<a class = "title" href = "https://facebook.github.io/react/docs/thinking-in-react.html"><h1>Thinking in React</h1></a>
 				<p class = "subText">A great place to start. All of the Facebook documentation is excellent and a great resource to keep handy.</p>
 				
