updated responsive design

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html >
 
 	<head>
-		<meta charset = "UTF-8">	
+		<meta charset = "UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>25 React Projects</title>
 		<link href = 'https://fonts.googleapis.com/css?family=Quicksand|Raleway' rel = 'stylesheet' type = 'text/css'>
 		<link rel = "stylesheet" type = "text/css" href = "./assets/main.css">
@@ -18,11 +19,6 @@
 					<p class = "aboutText">I built these 25 projects to learn how to use the React Javascript library. This page is about what I learned in the process.</p>
 				</div>
 		</div>
-
-				<div class = "creditsDiv">
-					<p class = "credits"><a href="https://github.com/bonham000/25-react-projects">View the code on Github</a></p>
-					<p class = "credits"><a href="http://sean-smith.me">Built by Sean Smith</a></p>
-				</div>
 
 		<div class = "projectList">
 			<h1 class = "contentTitle mainTitle">The Projects</h1>
@@ -69,6 +65,7 @@
 
 			<div class = "resources">
 				<h1 class = "contentTitle lowerTitle">Educational Resources</h1>
+				
 				<a class = "title" href = "https://facebook.github.io/react/docs/thinking-in-react.html"><h1>Thinking in React</h1></a>
 				<p class = "subText">A great place to start. All of the Facebook documentation is excellent and a great resource to keep handy.</p>
 				
@@ -93,6 +90,11 @@
 			</div>
 		</div>
 
+		</div>
+
+		<div class = "creditsDiv">
+			<p class = "credits"><a href="https://github.com/bonham000/25-react-projects">View the code on Github</a></p>
+			<p class = "credits"><a href="http://sean-smith.me">Built by Sean Smith</a></p>
 		</div>
 
 	</body>
