updated responsive code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset = "UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>25 React Projects</title>
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 		<link href = 'https://fonts.googleapis.com/css?family=Quicksand|Raleway' rel = 'stylesheet' type = 'text/css'>
 		<link rel = "stylesheet" type = "text/css" href = "./assets/main.css">
 	</head>
@@ -65,7 +66,7 @@
 
 			<div class = "resources">
 				<h1 class = "contentTitle lowerTitle">Educational Resources</h1>
-				
+
 				<a class = "title" href = "https://facebook.github.io/react/docs/thinking-in-react.html"><h1>Thinking in React</h1></a>
 				<p class = "subText">A great place to start. All of the Facebook documentation is excellent and a great resource to keep handy.</p>
 				
@@ -93,12 +94,15 @@
 		</div>
 
 		<div class = "creditsDiv">
-			<p class = "credits"><a href="https://github.com/bonham000/25-react-projects">View the code on Github</a></p>
-			<p class = "credits"><a href="http://sean-smith.me">Built by Sean Smith</a></p>
+			<p class = "credits"><a target = "_blank" href="https://github.com/bonham000/25-react-projects">View the code on Github</a></p>
+			<p class = "credits">Built by <a target = "_blank" href="http://sean-smith.me">Sean Smith</a>&nbsp;<a target = "_blank" class = "twitter" href="https://twitter.com/bonham_000"><i class="fa fa-twitter" aria-hidden="true"></i></a></p>
+			<div id = "shareBtn"><a href="https://twitter.com/share" class="twitter-share-button" data-via="bonham_000">Tweet</a></div>
 		</div>
 
 	</body>
 
 	<script type = "text/javascript" src = "./assets/index.js"></script>
+	
+	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 </html>
