added Recipe Box App

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<tr><td class="leftCol">Project 20:</td><td class="rightCol"><a target="_blank" href="./projects/Project_20/index.html"></a></td></tr>
 				<tr><td class="leftCol">Project 21:</td><td class="rightCol"><a target="_blank" href="./projects/Project_21/index.html">FCC React Markdown Previewer</a></td></tr>
 				<tr><td class="leftCol">Project 22:</td><td class="rightCol"><a target="_blank" href="./projects/Project_22/index.html">FCC Camper Leaderboard</a></td></tr>
-				<tr><td class="leftCol">Project 23:</td><td class="rightCol"><a target="_blank" href="./projects/Project_23/index.html"></a></td></tr>
+				<tr><td class="leftCol">Project 23:</td><td class="rightCol"><a target="_blank" href="./projects/Project_23/index.html">FCC Recipe Box App</a></td></tr>
 				<tr><td class="leftCol">Project 24:</td><td class="rightCol"><a target="_blank" href="./projects/Project_24/index.html"></a></td></tr>
 				<tr><td class="leftCol">Project 25:</td><td class="rightCol"><a target="_blank" href="./projects/Project_25/index.html"></a></td></tr>
 			</table>
