added Dungeon Crawler Project

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 				<tr><td class="leftCol">Project 17:</td><td class="rightCol"><a target="_blank" href="./projects/Project_17/index.html">FCC Tic-Tac-Toe Game</a></td></tr>
 				<tr><td class="leftCol">Project 18:</td><td class="rightCol"><a target="_blank" href="./projects/Project_18/index.html">FCC Simon Game</a></td></tr>
 				<tr><td class="leftCol">Project 19:</td><td class="rightCol"><a target="_blank" href="./projects/Project_19/index.html">Timestamped Notes App</a></td></tr>
-				<tr><td class="leftCol">Project 20:</td><td class="rightCol"><a target="_blank" href="./projects/Project_20/index.html"></a></td></tr>
+				<tr><td class="leftCol">Project 20:</td><td class="rightCol"><a target="_blank" href="./projects/Project_20/index.html">Project 20</a></td></tr>
 				<tr><td class="leftCol">Project 21:</td><td class="rightCol"><a target="_blank" href="./projects/Project_21/index.html">FCC React Markdown Previewer</a></td></tr>
 				<tr><td class="leftCol">Project 22:</td><td class="rightCol"><a target="_blank" href="./projects/Project_22/index.html">FCC Camper Leaderboard</a></td></tr>
 				<tr><td class="leftCol">Project 23:</td><td class="rightCol"><a target="_blank" href="./projects/Project_23/index.html">FCC Recipe Box App</a></td></tr>
 				<tr><td class="leftCol">Project 24:</td><td class="rightCol"><a target="_blank" href="./projects/Project_24/index.html">FCC Conway's Game of Life Simulation</a></td></tr>
-				<tr><td class="leftCol">Project 25:</td><td class="rightCol"><a target="_blank" href="./projects/Project_25/index.html"></a></td></tr>
+				<tr><td class="leftCol">Project 25:</td><td class="rightCol"><a target="_blank" href="./projects/Project_25/index.html">Free Code Camp as a Dungeon Crawler</a></td></tr>
 			</table>
 
 		<div id = "line"></div>
